k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tefas-api
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tefas-api
  template:
    metadata:
      labels:
        app: tefas-api
    spec:
      containers:
      - name: tefas-api
        image: engincan/tefasapi:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tefas-api
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 5003
    targetPort: 8000
    protocol: TCP
  selector:
    app: tefas-api
